--- a/css/styles.css
+++ b/css/styles.css
@@ -1,27 +1,43 @@
-#title{
+
+body{
+  font-family: "Montserrat";
+  text-align: center;
+}
+
+
+h1,h2,h3,h4,h5,h6 {
+  font-family: "Montserrat";
+}
+
+
+p{
+  color:#8f8f8f;
+}
+  /* Container */
+
+.container-fluid{
+  padding: 7% 15%;
+}
+
+.colored-section{
   background-color: #ff4c68;
   color: #fff;
 }
-body{
-  font-family: "Montserrat";
-}
-.container-fluid{
-  padding: 3% 15% 7%;
+
+.white-section{
+  background: #fff;
 }
 
-h1{
+/* Heading */
+.big-heading{
   font-family: "Montserrat-Black", sans-serif;
   font-size: 3.5rem;
   line-height: 1.5;
 }
 
-h2{
-  font-family: "Montserrat:900";
+.section-heading{
   font-size: 3rem;
-  line-height: 1.5;
-}
-p{
-  color:#8f8f8f;
+  line-height: 1.5
 }
 /* navigation Bar */
 
@@ -47,23 +63,29 @@ p{
 .download-button{
   margin: 5% 3% 5% 0;
 }
- /* Title image */
+ /* Title Section */
 
  .title-image{
    transform: rotate(25deg);
    position: absolute;
  }
 
+ #title .container-fluid{
+   text-align: left;
+   padding: 3% 15% 7%;
+ }
+
  /* feature section */
  #features{
-   background-color: #fff;
-   padding: 7% 15%;
    position: relative;
    z-index: 1;
  }
 
+ .feature-heading{
+   font-size: 1.5rem;
+ }
+
  .feature-box{
-   text-align: center;
    padding: 5%;
  }
 
@@ -79,13 +101,12 @@ p{
 
  #testimonials{
    background-color: #ef8172;
-   color: #fff;
-   text-align: center;
 
  }
 
-.carousel-item{
-  padding: 7% 15%;
+.testimonial-text{
+  font-size: 3rem;
+  line-height: 1.5;
 }
 
  .testimonial-image{
@@ -96,7 +117,6 @@ p{
 
  #press{
    background-color: #ef8172;
-   text-align: center;
    padding-bottom: 3%;
  }
  .press-logo{
@@ -108,9 +128,34 @@ p{
 
  #pricing{
    margin: 100px;
-   text-align: center;
  }
 
 .pricing-column{
   padding: 3% 2%;
+}
+
+.price-text{
+  font-size: 3rem;
+  line-height: 1.5
+}
+
+/* Media Query */
+
+@Media (max-width: 990px){
+#title{
+  text-align: center;
+}
+
+  .title-image{
+    position: static;
+    transform: rotate(0);
+  }
+}
+
+
+/* Footer */
+
+.social-icon{
+  margin:20px 10px;
+
 }
